# ShakbotTester

./: .gitignore  CMakeLists.txt  ShakbotTester.sln  readme.md
ShakbotTester/: BitBoard.cpp  BitBoard.hpp  Board.cpp  Board.hpp  BoardAttr.hpp  CCsearch.cpp  CMakeLists.txt  Color.hpp  Coord.hpp  Piece.hpp  PieceDef.cpp  Rotation.cpp  Rotation.hpp  ShakbotTester.vcxproj  ShakbotTester.vcxproj.filters  Source.cpp  TBP.cpp  Tetris.hpp  fasthash.cpp  fasthash.h  info.hpp  location.hpp  moves.hpp  olcPixelGameEngine.h  search.cpp  search.hpp  suggestion.hpp
Util/: bits.hpp  util.cpp
